--- a/index.html
+++ b/index.html
@@ -26,14 +26,9 @@
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
+    <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Rapid - v2.3.0
-  * Template URL: https://bootstrapmade.com/rapid-multipurpose-bootstrap-business-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+
 </head>
 
 <body>
@@ -60,7 +55,7 @@
 
       <nav class="main-nav d-none d-lg-block">
         <ul>
-          <li class="active"><a href="index.html">HOME</a></li>
+
 
           <!-- Content ABOUT US Start -->
             <li class="drop-down"><a href="">ABOUT US</a>
@@ -77,6 +72,7 @@
           <!-- Content ABOUT US End -->
 
           <!-- Content CENTRAL FACILITIES Start -->
+
           <li class="drop-down"><a href="">CENTRAL FACILITIES</a>
             <ul class="dropdown-menu">
 
@@ -101,6 +97,7 @@
           <li class="drop-down"><a href="">ADMINISTRATION</a>
             <ul class="dropdown-menu">
 
+
                     <li><a href="/abouts/aims">BOARD</a></li>
                     <li><a href="/abouts/vision-mission">CHAIRMAN</a></li>
                     <li><a href="/abouts/background">DIRECTOR</a></li>
@@ -115,6 +112,7 @@
             </ul>
           </li>
           <!-- Content ADMINISTRATION End -->
+
 
           <li class="drop-down"><a href="">PEOPLE</a>
           <ul>
@@ -138,7 +136,7 @@
               </li>
               <li class="drop-down"><a href="#">STUDENTS</a>
                 <ul>
-                  <li><a href="#">PROSPECTIVE STUDENTS </a></li>
+                   <h10>PROSPECTIVE STUDENT<br> <span></span></h10>
                   <li><a href="#">ACADEMIC PROGRAMME</a></li>
                   <li><a href="#">COURSES OFFERED</a></li>
                   <li><a href="#">ADMISSION PROCEDURE </a>
@@ -149,7 +147,9 @@
                     <li><a href="#">QIP</a></li>
                     <li><a href="#">PLACEMENT RESULTS</a></li>
                     <li><a href="#">FORMS</a></li>
-                    <li><a href="#">EXISTING STUDENTS</a></li>
+
+
+                     <h10>EXISTING STUDENT<br> <span></span></h10>
                     <li><a href="#">SYLLABUS</a></li>
                     <li><a href="#">LIBRARY</a></li>
                     <li><a href="#">MNIT MAIL ID</a></li>
@@ -172,14 +172,29 @@
           <li class="drop-down"><a href="">ACADEMICS</a>
             <ul class="dropdown-menu">
 
-                    <li><a href="/abouts/aims">E-RESOURCES</a></li>
-                    <li><a href="/abouts/vision-mission">TEQIP</a></li>
-                    <li><a href="/abouts/background">FEE STRUCTURE</a></li>
-                    <li><a href="/abouts/partnership">ADMISSION PROCEDURE - UG,PG and PHD</a></li>
-                    <li><a href="/abouts/campus">MoU and COLLABORATIONS</a></li>
-                    <li><a href="/abouts/facilities">RESEARCH AND PUBLICATIONS</a></li>
-                    <li><a href="/abouts/accommodation">CONFERENCES</a></li>
-                    <li><a href="/abouts/directions">EXAMINATION</a></li>
+                    <li><a href="/#">E-RESOURCES</a></li>
+                    <li><a href="/#">TEQIP</a></li>
+                    <li><a href="/#">FEE STRUCTURE</a></li>
+                    <li><a href="/#">ADMISSION PROCEDURE - UG,PG and PHD</a></li>
+                    <li><a href="/#">MoU and COLLABORATIONS</a></li>
+                    <li><a href="/#">RESEARCH AND PUBLICATIONS</a></li>
+                    <li><a href="/#">CONFERENCES</a></li>
+                    <li><a href="/#">EXAMINATION</a></li>
+
+           </ul>
+          </li>
+
+          <li class="drop-down"><a href="">DEPARTMENTS</a>
+            <ul class="dropdown-menu">
+
+                    <li><a href="/#">ARCHITECTURE AND PLANNING</a></li>
+                    <li><a href="/#">CENTRE FOR ENERGY AND ENVIRONMENT </a></li>
+                    <li><a href="/#">CHEMICAL ENGINEERING</a></li>
+                    <li><a href="/#">CHEMISTRY</a></li>
+                    <li><a href="/#">CIVIL ENGINEERING</a></li>
+                    <li><a href="/#">CSE</a></li>
+                    <li><a href="/#">ELECTRICAL ENGINEERING</a></li>
+                    <li><a href="/#">ELECTRONICS AND COMMUNICATION ENGINEERING</a></li>
 
            </ul>
           </li>
@@ -191,12 +206,13 @@
     </div>
   </header><!-- End Header -->
 
+
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="clearfix">
     <div class="container d-flex h-100">
       <div class="row justify-content-center align-self-center" data-aos="fade-up">
         <div class="col-md-6 intro-info order-md-first order-last" data-aos="zoom-in" data-aos-delay="100">
-          <h2>Rapid Solutions<br>for Your <span>Business!</span></h2>
+          <h2>National<br>Institute of <span>Technology</span></h2>
           <div>
             <a href="#about" class="btn-get-started scrollto">Get Started</a>
           </div>
@@ -210,9 +226,12 @@
     </div>
   </section><!-- End Hero -->
 
+
   <main id="main">
 
     <!-- ======= About Section ======= -->
+  </a>
+</div>
     <section id="about" class="about">
 
       <div class="container" data-aos="fade-up">
@@ -226,14 +245,20 @@
 
           <div class="col-lg-7 col-md-6">
             <div class="about-content" data-aos="fade-left" data-aos-delay="100">
-              <h2>About Us</h2>
-              <h3>Odio sed id eos et laboriosam consequatur eos earum soluta.</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p>Aut dolor id. Sint aliquam consequatur ex ex labore. Et quis qui dolor nulla dolores neque. Aspernatur consectetur omnis numquam quaerat. Sed fugiat nisi. Officiis veniam molestiae. Et vel ut quidem alias veritatis repudiandae ut fugit. Est ut eligendi aspernatur nulla voluptates veniam iusto vel quisquam. Fugit ut maxime incidunt accusantium totam repellendus eum error. Et repudiandae eum iste qui et ut ab alias.</p>
+
+
+              <h2>ABOUT MNIT</h2>
+              <h3>Institute History:</h3>
+              <p>The college was established in 1963 with the name as Malaviya Regional Engineering College, Jaipur as a joint venture of the Government of India and the Government of Rajasthan, Subsequently; on June 26, 2002 the college has been given the status of National Institute of Technology and on 15 August 2007, Proclaimed Institute of National Importance through Act of Parliament. The Institute is fully funded by Ministry of Education (Shiksha Mantralaya), Government of India. More than 12,000 students have already been graduated since its establishment.</p>
+              <h3>Campus Introduction:</h3>
+              <p>Extending into an area of over 317 acres of lush greenery, the campus of the Institute is imaginatively laid-out with a picturesque landscape. It presents a spectacle of harmony in modern architecture, and natural beauty which enthralls and inspires.
+The campus of the institute consisting of the institute buildings, halls of residence and staff colony. It is a residential campus offering accomodation to faculty, staff and students.
+The campus provides all essential amenities for community living like staff clubs, hospital, bank, post office, community centre, school, staff residences, gymnasium, playing fields, guest houses, 24 Hours internet connectivity, and canteen etc..</p>
               <ul>
-                <li><i class="ion-android-checkmark-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                <li><i class="ion-android-checkmark-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                <li><i class="ion-android-checkmark-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+                <h3>MAJOR ATTRACTIONS OF JAIPUR</h3>
+                <li><i class="ion-android-checkmark-circle"></i>NAHARGARH FORT</li>
+                <li><i class="ion-android-checkmark-circle"></i> AMBER FORT</li>
+                <li><i class="ion-android-checkmark-circle"></i> JALMAHAL</li>
               </ul>
             </div>
           </div>
@@ -242,12 +267,12 @@
 
     </section><!-- End About Section -->
 
-    <!-- ======= Services Section ======= -->
+    <!-- ======= DEPARTMENTS Section ======= -->
     <section id="services" class="services section-bg">
       <div class="container" data-aos="fade-up">
 
         <header class="section-header">
-          <h3>Services</h3>
+          <h3>DEPARTMENTS</h3>
           <p>Laudem latine persequeris id sed, ex fabulas delectus quo. No vel partiendo abhorreant vituperatoribus.</p>
         </header>
 
@@ -256,14 +281,14 @@
           <div class="col-md-6 col-lg-4 wow bounceInUp" data-aos="zoom-in" data-aos-delay="100">
             <div class="box">
               <div class="icon" style="background: #fceef3;"><i class="ion-ios-analytics-outline" style="color: #ff689b;"></i></div>
-              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
+              <h4 class="title"><a href="">ARCHITECTURE AND PLANNING</a></h4>
               <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-4" data-aos="zoom-in" data-aos-delay="200">
             <div class="box">
               <div class="icon" style="background: #fff0da;"><i class="ion-ios-bookmarks-outline" style="color: #e98e06;"></i></div>
-              <h4 class="title"><a href="">Dolor Sitema</a></h4>
+              <h4 class="title"><a href="">CHEMICAL ENGINEERING</a></h4>
               <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
             </div>
           </div>
@@ -271,7 +296,70 @@
           <div class="col-md-6 col-lg-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="box">
               <div class="icon" style="background: #e6fdfc;"><i class="ion-ios-paper-outline" style="color: #3fcdc7;"></i></div>
-              <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
+              <h4 class="title"><a href="">CHEMISTRY</a></h4>
+              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4 wow" data-aos="zoom-in" data-aos-delay="100">
+            <div class="box">
+              <div class="icon" style="background: #eafde7;"><i class="ion-ios-speedometer-outline" style="color:#41cf2e;"></i></div>
+              <h4 class="title"><a href="">CIVIL ENGINEERING</a></h4>
+              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-4" data-aos="zoom-in" data-aos-delay="200"">
+        <div class=" box">
+            <div class="icon" style="background: #e1eeff;"><i class="ion-ios-world-outline" style="color: #2282ff;"></i></div>
+            <h4 class="title"><a href="">COMPUTER SCIENCE AND ENGINEERING</a></h4>
+            <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-4" data-aos="zoom-in" data-aos-delay="300">
+          <div class="box">
+            <div class="icon" style="background: #ecebff;"><i class="ion-ios-clock-outline" style="color: #8660fe;"></i></div>
+            <h4 class="title"><a href="">ELECTRICAL ENGINEERING</a></h4>
+            <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+          </div>
+        </div>
+
+      </div>
+
+      </div>
+
+    </section><!-- End Services Section -->
+
+
+    <!-- ======= ACADEMICS Section ======= -->
+    <section id="services" class="services section-bg">
+      <div class="container" data-aos="fade-up">
+
+        <header class="section-header">
+          <h3>ACADEMICS</h3>
+          <p>Laudem latine persequeris id sed, ex fabulas delectus quo. No vel partiendo abhorreant vituperatoribus.</p>
+        </header>
+
+        <div class="row">
+
+          <div class="col-md-6 col-lg-4 wow bounceInUp" data-aos="zoom-in" data-aos-delay="100">
+            <div class="rounded-circle box">
+              <div class="icon" style="background: #fceef3;"><i class="ion-ios-analytics-outline" style="color: #ff689b;"></i></div>
+              <h4 class="title"><a href="">UG Programmes</a></h4>
+              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4" data-aos="zoom-in" data-aos-delay="200">
+            <div class="rounded-circle box">
+              <div class="icon" style="background: #fff0da;"><i class="ion-ios-bookmarks-outline" style="color: #e98e06;"></i></div>
+              <h4 class="title"><a href="">PG Programmes</a></h4>
+              <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-4" data-aos="zoom-in" data-aos-delay="300">
+            <div class="rounded-circle box">
+              <div class="icon" style="background: #e6fdfc;"><i class="ion-ios-paper-outline" style="color: #3fcdc7;"></i></div>
+              <h4 class="title"><a href="">PHD. Programmes</a></h4>
               <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
             </div>
           </div>
@@ -301,7 +389,9 @@
       </div>
 
       </div>
-    </section><!-- End Services Section -->
+
+    </section><!-- End ACADEMICS Section -->
+
 
     <!-- ======= Why Us Section ======= -->
     <section id="why-us" class="why-us">
@@ -594,12 +684,12 @@
       </div>
     </section><!-- End Portfolio Section -->
 
-    <!-- ======= Testimonials Section ======= -->
+    <!-- ======= ANNOUNCEMENT Section ======= -->
     <section id="testimonials" class="testimonials">
       <div class="container" data-aos="zoom-in">
 
         <header class="section-header">
-          <h3>Testimonials</h3>
+          <h3>ANNOUNCEMENTS</h3>
         </header>
 
         <div class="row justify-content-center">
@@ -609,37 +699,37 @@
 
               <div class="testimonial-item">
                 <img src="assets/img/testimonial-1.jpg" class="testimonial-img" alt="">
-                <h3>Saul Goodman</h3>
-                <h4>Ceo &amp; Founder</h4>
+                <h3>Guidelines</h3>
+                <h4>Ph.D Entrance Exam</h4>
                 <p>
-                  Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                Guidelines for PhD Entrance Exam Even Semester 2020-21 & Model MCQ, Syllabus
                 </p>
               </div>
 
               <div class="testimonial-item">
                 <img src="assets/img/testimonial-2.jpg" class="testimonial-img" alt="">
-                <h3>Sara Wilsson</h3>
-                <h4>Designer</h4>
+                <h3>Registration Notice</h3>
+                <h4>Ug/PG/PHD</h4>
                 <p>
-                  Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                Registration Notice for UG/PG/PHD students for even semester 2020-21
                 </p>
               </div>
 
               <div class="testimonial-item">
                 <img src="assets/img/testimonial-3.jpg" class="testimonial-img" alt="">
-                <h3>Jena Karlis</h3>
-                <h4>Store Owner</h4>
+                <h3>Online Application</h3>
+                <h4>Non-Teaching posts</h4>
                 <p>
-                  Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+                Online application are invited for various Group-A Non-Teaching Posts [Adv. No. AES/MNIT/ESTT/2020/03]
                 </p>
               </div>
 
               <div class="testimonial-item">
                 <img src="assets/img/testimonial-4.jpg" class="testimonial-img" alt="">
-                <h3>Matt Brandon</h3>
-                <h4>Freelancer</h4>
+                <h3>Provisional List</h3>
+                <h4>Ph.D. ADMISSION</h4>
                 <p>
-                  Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
+                Provisional List of Eligible/Ineligible candidates for written test / Interview for Ph.D. Admission Even Semester 2020-21.
                 </p>
               </div>
 
@@ -651,12 +741,21 @@
       </div>
     </section><!-- End Testimonials Section -->
 
-    <!-- ======= Team Section ======= -->
+    <!-- ======= EVENTS Section ======= -->
     <section id="team" class="team section-bg">
       <div class="container" data-aos="fade-up">
         <div class="section-header">
-          <h3>Team</h3>
-          <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
+          <ul>
+          <h3>EVENTS</h3>
+          <li><i class="ion-android-checkmark-circle"></i>MNIT Sports Tournament (Every Year)</li>
+          <li><i class="ion-android-checkmark-circle"></i>Annual Athletic Meet (Every Year</li>
+            <li><i class="ion-android-checkmark-circle"></i>Inter NIT Tournaments</li>
+
+              <p>  Our institute recently has won</p>
+              <li><i class="ion-android-checkmark-circle"></i> Gold Medal in Lawn Tennis(Men)</li>
+                <li><i class="ion-android-checkmark-circle"></i> Silver Medal in Table Tennis(Girls)</li>
+                  <li><i class="ion-android-checkmark-circle"></i> Secured 2nd Position in Chess(Men)</li>
+</p>
         </div>
 
         <div class="row">
@@ -738,12 +837,12 @@
       </div>
     </section><!-- End Team Section -->
 
-    <!-- ======= Clients Section ======= -->
+    <!-- ======= DEPARTMENTS Section ======= -->
     <section id="clients" class="clients">
       <div class="container" data-aos="zoom-in">
 
         <header class="section-header">
-          <h3>Our Clients</h3>
+          <h3>DEPARTMENTS</h3>
         </header>
 
         <div class="owl-carousel clients-carousel">
@@ -758,7 +857,7 @@
         </div>
 
       </div>
-    </section><!-- End Clients Section -->
+    </section><!-- End DEPARTMENTS Section -->
 
     <!-- ======= Pricing Section ======= -->
     <section id="pricing" class="pricing section-bg wow fadeInUp">
